# insurance-nft

./: .env  PLAN.md  README.md  commands  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
neardev/: dev-account.env
src/: config.js  index.html  main.js  test-setup.js  test.js
